--- a/src/main/resources/assets/seamless_loading_screen/lang/zh_cn.json
+++ b/src/main/resources/assets/seamless_loading_screen/lang/zh_cn.json
@@ -2,16 +2,16 @@
   "seamless_loading_screen.screen.generating_chunks": "生成区块中",
   "seamless_loading_screen.keybind.config": "打开无缝加载页配置",
   "seamless_loading_screen.tinyconfig.title": "无缝加载页选项",
-  "seamless_loading_screen.tinyconfig.time": "区块加载延迟",
+  "seamless_loading_screen.tinyconfig.time": "区块加载缓冲时长",
   "seamless_loading_screen.tinyconfig.fade": "淡入效果时长",
-  "seamless_loading_screen.tinyconfig.disableCamera": "淡入效果结束前禁用摄像机运动",
+  "seamless_loading_screen.tinyconfig.disableCamera": "淡入效果结束前禁用镜头运动",
   "seamless_loading_screen.tinyconfig.boolean.true": "是",
   "seamless_loading_screen.tinyconfig.boolean.false": "否",
-  "seamless_loading_screen.tinyconfig.archiveScreenshots": "Archive Screenshots",
-  "seamless_loading_screen.tinyconfig.resolution": "Screenshot Resolution",
-  "seamless_loading_screen.tinyconfig.resolution.tooltip": "Native - Optifine TAA 兼容性, game's resolution\nNormal - Supports up to 21:9 ultrawide monitors\n4K - For 4K monitors\n8K - For 8K monitors",
-  "seamless_loading_screen.tinyconfig.enum.ScreenshotResolution.Native": "Native",
-  "seamless_loading_screen.tinyconfig.enum.ScreenshotResolution.Normal": "Normal",
+  "seamless_loading_screen.tinyconfig.archiveScreenshots": "保存截屏",
+  "seamless_loading_screen.tinyconfig.resolution": "截屏分辨率",
+  "seamless_loading_screen.tinyconfig.resolution.tooltip": "原生 - Optifine TAA 兼容性, 游戏分辨率\n正常 - 最高支持 21:9 超宽屏\n4K - 针对 4K 分辨率的显示器\n8K - 针对 8K 分辨率的显示器",
+  "seamless_loading_screen.tinyconfig.enum.ScreenshotResolution.Native": "原生",
+  "seamless_loading_screen.tinyconfig.enum.ScreenshotResolution.Normal": "正常",
   "seamless_loading_screen.tinyconfig.enum.ScreenshotResolution.r4K": "4K",
   "seamless_loading_screen.tinyconfig.enum.ScreenshotResolution.r8K": "8K"
 }
