--- a/src/main/resources/assets/seamless_loading_screen/lang/zh_cn.json
+++ b/src/main/resources/assets/seamless_loading_screen/lang/zh_cn.json
@@ -8,6 +8,8 @@
   "seamless_loading_screen.tinyconfig.boolean.true": "是",
   "seamless_loading_screen.tinyconfig.boolean.false": "否",
   "seamless_loading_screen.tinyconfig.archiveScreenshots": "保存截屏",
+  "seamless_loading_screen.tinyconfig.updateWorldIcon": "Update World Icon",
+  "seamless_loading_screen.server.allowCustomScreenshot": "Use Custom Screenshot",
   "seamless_loading_screen.tinyconfig.resolution": "截屏分辨率",
   "seamless_loading_screen.tinyconfig.resolution.tooltip": "原生 - Optifine TAA 兼容性, 游戏分辨率\n正常 - 最高支持 21:9 超宽屏\n4K - 针对 4K 分辨率的显示器\n8K - 针对 8K 分辨率的显示器",
   "seamless_loading_screen.tinyconfig.enum.ScreenshotResolution.Native": "原生",
