--- a/common/src/main/resources/assets/seamless_loading_screen/lang/zh_cn.json
+++ b/common/src/main/resources/assets/seamless_loading_screen/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-  "seamless_loading_screen.screen.generating_chunks": "生成区块中",
+  "seamless_loading_screen.screen.loading_chunks": "生成区块中",
   "seamless_loading_screen.keybind.config": "打开无缝加载页配置",
   "seamless_loading_screen.midnightconfig.title": "无缝加载页选项",
   "seamless_loading_screen.midnightconfig.time": "区块加载缓冲时长",
