--- a/common/src/main/resources/assets/seamless_loading_screen/lang/en_us.json
+++ b/common/src/main/resources/assets/seamless_loading_screen/lang/en_us.json
@@ -9,6 +9,17 @@
   "seamless_loading_screen.midnightconfig.updateWorldIcon": "Update World Icon",
   "seamless_loading_screen.midnightconfig.boolean.true": "True",
   "seamless_loading_screen.midnightconfig.boolean.false": "False",
+
+  "seamless_loading_screen.midnightconfig.soundEffect": "Sound Effect",
+  "seamless_loading_screen.midnightconfig.playSoundEffect": "Enable Sound Effect",
+  "seamless_loading_screen.midnightconfig.soundPitch": "Sound Pitch",
+  "seamless_loading_screen.midnightconfig.soundVolume": "Sound Volume",
+  "seamless_loading_screen.midnightconfig.screenshotBlurStrength": "Background Blur Strength",
+  "seamless_loading_screen.midnightconfig.screenshotBlurQuality": "Background Blur Quality",
+  "seamless_loading_screen.midnightconfig.enableScreenshotBlur": "Enable Background Blur",
+  "seamless_loading_screen.midnightconfig.tintColor": "Tint Color (RGB)",
+  "seamless_loading_screen.midnightconfig.tintStrength": "Tint Strength",
+
   "seamless_loading_screen.midnightconfig.resolution": "Screenshot Resolution",
   "seamless_loading_screen.midnightconfig.resolution.tooltip": "Native - Optifine TAA compatibility, game's resolution\nNormal - Supports up to 21:9 ultrawide monitors\n4K - For 4K monitors\n8K - For 8K monitors",
   "seamless_loading_screen.midnightconfig.enum.ScreenshotResolution.Native": "Native",
