--- a/common/src/main/resources/assets/seamless_loading_screen/lang/en_us.json
+++ b/common/src/main/resources/assets/seamless_loading_screen/lang/en_us.json
@@ -59,5 +59,10 @@
   "seamless_loading_screen.server.displayMode": "Seamless Screen",
   "seamless_loading_screen.server.displayMode.ENABLED": "Enabled",
   "seamless_loading_screen.server.displayMode.FREEZE": "Custom / Freeze",
-  "seamless_loading_screen.server.displayMode.DISABLED": "Disabled"
+  "seamless_loading_screen.server.displayMode.DISABLED": "Disabled",
+
+  "seamless_loading_screen.config.server_settings": "Server Specific Settings",
+
+  "seamless_loading_screen.config.blacklistedAddresses": "Blacklisted Server Addresses",
+  "seamless_loading_screen.config.blacklistedAddresses.description": "List of Addresses that Seamless will be disabled when connecting to the server."
 }
