--- a/common/src/main/resources/assets/seamless_loading_screen/lang/en_us.json
+++ b/common/src/main/resources/assets/seamless_loading_screen/lang/en_us.json
@@ -40,15 +40,15 @@
   "seamless_loading_screen.config.resolution.normal": "Normal",
   "seamless_loading_screen.config.resolution.r4k": "4K",
   "seamless_loading_screen.config.resolution.r8k": "8K",
-  "seamless_loading_screen.server.displayMode": "Seamless Screen",
+  "seamless_loading_screen.config.displayMode": "Seamless Screen",
   "seamless_loading_screen.config.serverDisplayMode": "Server's Default Display Mode",
   "seamless_loading_screen.config.serverDisplayMode.description": "Changes the default mode selected for whether or not to display a Screenshot",
-  "seamless_loading_screen.server.displayMode.ENABLED": "Enabled",
-  "seamless_loading_screen.server.displayMode.FREEZE": "Custom / Freeze",
-  "seamless_loading_screen.server.displayMode.DISABLED": "Disabled",
+  "seamless_loading_screen.config.displayMode.ENABLED": "Enabled",
+  "seamless_loading_screen.config.displayMode.FREEZE": "Custom / Freeze",
+  "seamless_loading_screen.config.displayMode.DISABLED": "Disabled",
   "seamless_loading_screen.config.server_settings": "Server Specific Settings",
   "seamless_loading_screen.config.blacklistedAddresses": "Blacklisted Servers",
-  "seamless_loading_screen.config.blacklistedAddresses.description": "List of server addresses that Seamless Loading Screen will disable itself for when connecting to the server.",
+  "seamless_loading_screen.config.blacklistedAddresses.description": "List of server addresses that Seamless Loading Screen will disable itself for when connecting to the config.",
   "seamless_loading_screen.config.saveScreenshotsByUser": "Save Screenshots By User",
   "seamless_loading_screen.config.saveScreenshotsByUser.description": "Will attempt to use the username (if valid) to save the screenshots to prevent multi-user issues"
 }
