--- a/common/src/main/resources/assets/seamless_loading_screen/lang/en_us.json
+++ b/common/src/main/resources/assets/seamless_loading_screen/lang/en_us.json
@@ -43,9 +43,9 @@
   "seamless_loading_screen.config.displayMode": "Seamless Screen",
   "seamless_loading_screen.config.serverDisplayMode": "Server's Default Display Mode",
   "seamless_loading_screen.config.serverDisplayMode.description": "Changes the default mode selected for whether or not to display a Screenshot",
-  "seamless_loading_screen.config.displayMode.ENABLED": "Enabled",
-  "seamless_loading_screen.config.displayMode.FREEZE": "Custom / Freeze",
-  "seamless_loading_screen.config.displayMode.DISABLED": "Disabled",
+  "seamless_loading_screen.config.displayMode.enabled": "Enabled",
+  "seamless_loading_screen.config.displayMode.freeze": "Custom / Freeze",
+  "seamless_loading_screen.config.displayMode.disabled": "Disabled",
   "seamless_loading_screen.config.server_settings": "Server Specific Settings",
   "seamless_loading_screen.config.blacklistedAddresses": "Blacklisted Servers",
   "seamless_loading_screen.config.blacklistedAddresses.description": "List of server addresses that Seamless Loading Screen will disable itself for when connecting to the config.",
